Alignment Issues in Hero Section Fixed

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -37,7 +37,7 @@
 }
 
 .secondary-heading{
-    font-size: 24px;
+    font-size: 22px;
     line-height: 35px;
     font-weight: 700;
     text-decoration: underline;
@@ -76,13 +76,21 @@
     max-height: 500px;
 }
 .left-col{
-    width: 40%;
+    width: 50%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: left;
     gap: 20px;
     margin: auto 0;
+}
+
+.left-col h1{
+    font-size: 60px;
+}
+
+.left-col p{
+    width: 100%;
 }
 
 .hero-wrap img{
@@ -102,7 +110,7 @@
     text-align: center;
 }
 
-.featured-flowers h2, p{
+.featured-flowers h2,p{
     width: 60%;
     margin: 0 auto;
 }
